+=========================================================+
   ShopXO 1.9.1 Release --- http://shopxo.net
+=========================================================+
全局
	1. 支持货币功能
	2. 新增快捷导航
	3. 新增商品属性参数
	4. 新增附件、css/js静态可配置CDN域名
	5. 网站首页可后台控制配置
	6. 新增SESSION和数据缓存配置Redis（独立配置）
	7. 新增支付接口异步推送日志记录
	8. 用户地址优化（新增身份证信息填写上传照片）

web端
	1. 后台菜单支持自定义url地址、并支持钩子自动添加
	2. 后台区块数据统计新增当月、上月维度
	3. 新增插件路由短地址规则
	4. 动态表格列表支持自定义显示字段和拖拽排序
	5. 后台新增用户地址管理

小程序
	1. QQ小程序支持微信支付
	2. 支持手机号码一键绑定[百度/微信]
	3. 支持获取收货地址[百度/微信/QQ/支付宝/头条]

插件
	1. 汇率插件支持货币自由切换
	2. 新增IEPay新西兰货币支付（支付宝+微信）
	3. 新增博客插件、写文章增加商城的搜索引擎收录、关联推荐商品
	4. 钱包插件支持修改余额输入操作密码、提现支持配置最低金额


+=========================================================+
   ShopXO 1.9.0 Release 20200818 http://shopxo.net
+=========================================================+
全局
	1. 积分支持按照订单商品总额比例发放，发生售后收回积分
	2. 微信小程序好物推荐和直播组件支持配置组件版本号
	3. 支持商品自定义销售类型（销售模式、展示模式、自提模式、虚拟销售模式、销售+自提模式）
	4. 商品管理去除库存的配置，移动到独立库存中管理
	5. 新增仓库管理，仓库商品库存管理（多仓库、多库存）
	6. 新增 Ipay88 支付方式
	7. 订单新增批量合并支付
	8. 支付日志、退款日志、用户消息优化
	9. 商品封面图片优化
	10. 搜索支持空格多个关键字
	11. 商品分类支持1~3级自由配置展示
	12. 搜索新增热度和新品排序
	13. 用户问答管理页面新增留言入口
	14. 部分细节优化、bug修复、安全增强

web端
	1. 所有条件、数据列表、新增、编辑、删除 新增钩子（公共 form 表单封装）
	2. 后台管理登录页面新增随机背景（支持关闭）
	3. 商品编辑规格新增选中光标，用于数据太多定位操作位置
	4. 后端新增用户商品浏览管理
	5. 后端新增用户商品收藏管理
	6. 支付插件支持自定义输出成功/失败内容
	7. 支付插件管理优化适配平台，编辑不可超出插件定义的适配平台
	8. 用户积分实时获取
	9. 管理员新增状态
	10. 后台左侧菜单优化，更简洁方便，小程序管理集合
	11. 后台新增商品复制功能
	12. 后台小程序配置集中管理
	13. 品牌支持关联多个分类
	14. 首页轮播支持电话、地图事件方式
	15. 商品详情二维码改为静态、更容易适配各种服务器环境
	16. 后台首页新增收益走势

小程序
	1. 微信小程序支持分享到朋友圈

插件
	1. 分销插件新增返积分模块、海报高清
	2. 微信小程序直播分享海报高清
	3. 运费插件支持单独每一个仓库独立配置


+=========================================================+
   ShopXO 1.8.1 Release 20200420 http://shopxo.net
+=========================================================+
全局
	1. 优购返现
	2. 微信小程序直播
	3. 购物车商品删除造成数据错误修复
	4. 商品评论字符串截取错误修复
	5. 更多细节优化以及BUG修复
	6. 部分常用数据新增缓存、提升响应速度

web端
	1. 后台数据列表布局优化、支持操作栏浮动

小程序端
	1. 优购返现
	2. 微信小程序直播
	3. 分享组件增强
	4. 部分细节优化以及BUG修复

插件
	1. 优购返现
	2. 极速下单
	3. 微信小程序直播
	4. 订单导出打印
	5. 订单改价

