@@ -7,17 +7,15 @@
 <div class="am-g inside agreement">
     <h2>安装协议</h2>
     <ul>
-        <li class="title">ShopXO遵循Apache2开源协议发布</li>
-        <li>1.Apache Licence是著名的非盈利开源组织Apache采用的协议</li>
-        <li>2.该协议和BSD类似，鼓励代码共享和尊重原作者的著作权，同样允许代码修改，再作为开源或商业软件发布</li>
-        <li class="title">需要满足的条件也和BSD类似</li>
-        <li>1.需要给代码的用户一份Apache Licence</li>
-        <li>2.如果你修改了代码，需要在被修改的文件中说明</li>
-        <li>3.在延伸的代码中（修改和有源代码衍生的代码中）需要带有原来代码中的协议，商标，专利声明和其他原来作者规定需要包含的说明</li>
-        <li>4.如果再发布的产品中包含一个Notice文件，则在Notice文件中需要带有Apache icence</li>
-        <li>5.你可以在Notice中增加自己的许可，但不可以表现为对Apache Licence构成更改</li>
-        <li>6.Apache Licence也是对商业应用友好的许可，使用者也可以在需要的时候修改代码来满足需要并作为开源或商业产品发布/销售</li>
-        <li>7.英文原文：<a href="http://www.apache.org/licenses/LICENSE-2.0.html" target="_blank">http://www.apache.org/licenses/LICENSE-2.0.html</a></li>
+        <li class="title">ShopXO遵循MIT开源协议发布</li>
+        <li>MIT许可证之名源自麻省理工学院（Massachusetts Institute of Technology, MIT），又称「X条款」（X License）或「X11条款」（X11 License）。</li>
+        <li>MIT内容与三条款BSD许可证（3-clause BSD license）内容颇为近似，但是赋予软体被授权人更大的权利与更少的限制。</li>
+        <li class="title">协议条款</li>
+        <li>1. 被授权人有权利使用、复制、修改、合并、出版发行、散布、再授权及贩售软体及软体的副本。</li>
+        <li>2. 被授权人可根据程式的需要修改授权条款为适当的内容。</li>
+        <li>3. 在软件和软件的所有副本中都必须包含版权声明和许可声明。</li>
+        <li class="am-margin-top-xl">协议地址：<a href="https://ask.shopxo.net/article/15" target="_blank">https://ask.shopxo.net/article/15</a></li>
+        <li>英文原文：<a href="https://opensource.org/licenses/mit-license.php" target="_blank">https://opensource.org/licenses/mit-license.php</a></li>
     </ul>
 
     <div class="agree">
