@@ -1,13 +1,17 @@
 <footer data-am-widget="footer" class="am-footer am-footer-default" data-am-footer="{  }">
     <div class="am-footer-switch">
         <span class="am-footer-ysp" data-rel="mobile" data-am-modal="{target: '#am-switch-mode'}">
+        <a href="http://zongzhige.com/" target="_blank" title="纵之格">纵之格</a>
+        </span>
+        <span class="am-footer-divider"> &nbsp;&nbsp;| &nbsp;&nbsp; </span>
+        <span class="am-footer-ysp" data-rel="mobile" data-am-modal="{target: '#am-switch-mode'}">
         <a href="http://shopxo.net/" target="_blank" title="ShopXO官网">ShopXO官网</a>
         </span>
-        <span class="am-footer-divider"> &nbsp;&nbsp;&nbsp;| &nbsp;&nbsp;&nbsp; </span>
+        <span class="am-footer-divider"> &nbsp;&nbsp;| &nbsp;&nbsp; </span>
         <span class="am-footer-ysp" data-rel="mobile" data-am-modal="{target: '#am-switch-mode'}">
-        <a href="http://store.shopxo.net/" target="_blank" title="ShopXO应用商店">ShopXO应用商店</a>
+        <a href="http://store.shopxo.net/" target="_blank" title="应用商店">应用商店</a>
         </span>
-        <span class="am-footer-divider"> &nbsp;&nbsp;&nbsp;| &nbsp;&nbsp;&nbsp; </span>
+        <span class="am-footer-divider"> &nbsp;&nbsp;| &nbsp;&nbsp; </span>
         <a href="http://ask.shopxo.net/" target="_blank" title="官方论坛">官方论坛</a>
     </div>
     <div class="am-footer-miscs">
