@@ -1,6 +1,7 @@
 +=========================================================+
    ShopXO 1.9.1 Release --- http://shopxo.net
 +=========================================================+
+ShopXO从v1.9.1版本起由Apache2.0协议改成MIT协议
 全局
 	1. 支持货币功能
 	2. 新增快捷导航
